syntax = "proto3";

package ozonmp.ozon_keyword_api.v1;

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/execut/ozon-keyword-api/pkg/ozon-keyword-api;ozon_keyword_api";

// OzonKeywordApiService - Service for working with ozons
service OzonKeywordApiService {
  // DescribeKeywordV1 - Describe a ozon
  rpc DescribeKeywordV1(DescribeKeywordV1Request) returns (DescribeKeywordV1Response) {
    option (google.api.http) = {
      get: "/v1/ozons/{keyword_id}"
    };
  }
}

message Keyword {
  uint64 id  = 1;
  uint64 foo = 2;
  google.protobuf.Timestamp created = 3;
}

message DescribeKeywordV1Request {
  uint64 keyword_id = 1 [(validate.rules).uint64.gt = 0];
}

message DescribeKeywordV1Response {
  Keyword value = 1;
}
